--- a/styles/home_styles.css
+++ b/styles/home_styles.css
@@ -1,29 +1,43 @@
 @import "./reset.css";
 @import "../assets/fonts/fonts.css";
+@import "./components/index.css";
 
 :root {
+    font-size: 8px;
     /* Colors */
     --color-primary: #ED1C24;
     --color-black: #191919;
+    --color-paragraph: #525252;
+    --color-button: #8A8A8A;
+    --color-border-card: #E5E5E5;
+    --color-original-price: #A3A3A3;
+    --color-assurance: #484848;
     --color-white: #FFFFFF;
     --color-darker-gray: #CCCCCC;
     --color-lighter-gray: #FAFAFA;
 }
 
 * {
-    background-color: pink;
+    font-family: "Poppins";
 }
 
-h1 {
-    font-family: "Poppins", sans-serif;
+p,
+a,
+span {
+    font-size: 2rem;
 }
 
-.header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+
+
+h1,
+h2 {
+    font-family: "Roboto";
 }
 
 .img-logo {
     display: block;
+}
+
+.icon {
+    stroke: currentColor;
 }
