--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -3,6 +3,7 @@
 @import "./new-arrival.css";
 @import "./product-card.css";
 @import "./assurance.css";
+@import "./banner-bottom.css";
 
 .main {
     width: 100%;
