--- a/styles/components/banner-bottom.css
+++ b/styles/components/banner-bottom.css
@@ -1,15 +1,10 @@
+/* Banner bottom  */
 .banner-bottom {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: 1920px;
     background-image: url("https://s3-alpha-sig.figma.com/img/ca59/205d/9c1a1c85c11c236f9317b811fa709f36?Expires=1734912000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=L-TFFFX09SUnvhn-NTp28koCJU5U1JKI54D1HL4TI3K8gvlqswZYBZFE4BzRYWACXFoFjheOsdr222MpNvef9xYKGtplNqg0YOKOSWwAYg~Qjb2Z6bePdgXMFhcZU5tPoQPnM6D3T-4l1AOTgoDWn4dUMmsKLbOvCw4uJEB-OGnOrvmU0GgVe9Yn42i4MJMVfNRkWnCIs-m-aus9pLF8kR3zYWmliy5ufv7~cHLfnWYTFlN3D6sYhvo5PPojg5rMEaK8WxQMpgCFTXdx6ebGKfoO6ROBJx88zxI7c4y80sCBzaMB2MN6BH22PCY2Xs561Lb6Sjum8DockdWd-83eDA__");
     background-size: cover;
     background-position: 50% 37%;
     box-sizing: border-box;
 }
-
 
 .banner-layer {
     width: 100%;
@@ -32,6 +27,7 @@
     max-width: 602px;
     color: var(--color-white);
     gap: 1.5rem;
+    text-shadow: 0px 4px 3px #00000033;
 }
 
 .banner-bottom-text>.top-text {
@@ -55,13 +51,59 @@
 .bottom-button {
     width: 135px;
     height: 50px;
+    border: solid 1px transparent;
     border-radius: 0.75rem;
+
     font-size: 2rem;
     font-weight: 500;
+
     background-color: var(--color-primary);
-    border: solid 1px transparent;
+    color: var(--color-white);
+
     margin-block-start: 1.2rem;
     margin-block-end: 10rem;
-    color: var(--color-white);
+
     cursor: pointer;
+    box-shadow: 0px 4px 4px #00000040;
+    text-transform: capitalize;
+    transition: all 150ms;
+}
+
+.bottom-button:hover {
+    background-color: var(--color-white);
+    color: var(--color-primary);
+    border-color: var(--color-primary);
+}
+
+/* Assurance nav  */
+.assurance-nav {
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+.assurance-container {
+    display: flex;
+    flex-direction: row;
+    gap: 14rem;
+    padding: 6rem 2rem;
+    margin-block-start: 15rem;
+    margin-block-end: 15rem;
+}
+
+.assurance-content {
+    display: flex;
+    gap: 2rem;
+}
+
+.assurance-text>.title {
+    font-weight: 500;
+    font-size: 2.5rem;
+    color: var(--color-assurance);
+}
+
+.assurance-text>.description {
+    font-weight: 400;
+    font-size: 2rem;
+    color: var(--color-assurance);
 }
