--- a/styles/components/new-arrival.css
+++ b/styles/components/new-arrival.css
@@ -38,9 +38,12 @@
     display: none;
     justify-content: center;
     align-items: center;
+
     gap: 2.5rem;
+    margin-block-end: 5rem;
 }
 
+/* Mobile version */
 .new-arrivals-filters-select {
     display: flex;
     flex-direction: column;
@@ -61,7 +64,6 @@
     color: var(--color-paragraph);
     border: solid 1px var(--color-darker-gray);
     padding: 1rem 2rem;
-    font-family: "Poppins";
     border-radius: 1rem;
 }
 
@@ -72,8 +74,8 @@
 
     font-size: 2rem;
     padding: 1rem 2rem;
-    font-family: "Poppins";
     border-radius: 1.4rem;
+
     cursor: pointer;
     transition: all 200ms;
 }
@@ -81,7 +83,7 @@
 .filter-btn.active {
     background-color: var(--color-primary);
     color: var(--color-white);
-    box-shadow: 0px 0px 10px 0px rgba(237, 28, 36, 0.25);
+    box-shadow: 0px 20px 35px 0px #00000026;
 }
 
 .filter-btn:not(.active):hover {
@@ -93,7 +95,32 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
+    gap: 6rem 4rem;
+}
+
+.new-arrivals-button {
+
+    font-size: 2rem;
+    font-weight: 400;
+
+    background-color: var(--color-primary);
+    color: var(--color-white);
+
+    padding: 1.8rem 7.6rem;
+    margin-block-start: 3rem;
+    margin-block-end: 8rem;
+    border: solid 1px transparent;
+    border-radius: 1.2rem;
+
+    box-shadow: 0px 20px 35px #00000026;
+    cursor: pointer;
+    transition: all 150ms;
+}
+
+.new-arrivals-button:hover {
+    background-color: var(--color-white);
+    color: var(--color-primary);
+    border: solid 1px var(--color-primary);
 }
 
 @media screen and (min-width: 1024px) {
