--- a/styles/components/banner-bottom.css
+++ b/styles/components/banner-bottom.css
@@ -31,37 +31,36 @@
 }
 
 .banner-bottom-text>.top-text {
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 600;
-    margin-block-start: 14rem;
-
+    margin-block-start: 9rem;
 }
 
 .banner-bottom-text>.title {
-    font-size: 6rem;
+    font-size: 4rem;
     font-weight: 700;
 }
 
 .banner-bottom-text>.description {
-    font-size: 2rem;
+    width: 60%;
+    font-size: 1.5rem;
     font-weight: 400;
-    margin-block-end: 2rem;
+    margin-block-end: 1rem;
 }
 
 .bottom-button {
-    width: 135px;
-    height: 50px;
     border: solid 1px transparent;
     border-radius: 0.75rem;
 
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 500;
 
     background-color: var(--color-primary);
     color: var(--color-white);
 
     margin-block-start: 1.2rem;
-    margin-block-end: 10rem;
+    margin-block-end: 8rem;
+    padding: 1rem 2rem;
 
     cursor: pointer;
     box-shadow: 0px 4px 4px #00000040;
@@ -85,25 +84,127 @@
 .assurance-container {
     display: flex;
     flex-direction: row;
-    gap: 14rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    column-gap: 4rem;
+    row-gap: 3rem;
     padding: 6rem 2rem;
-    margin-block-start: 15rem;
-    margin-block-end: 15rem;
+    margin-block-start: 1rem;
+    margin-block-end: 1rem;
 }
 
 .assurance-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 272.02px;
     display: flex;
     gap: 2rem;
 }
 
 .assurance-text>.title {
     font-weight: 500;
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: var(--color-assurance);
 }
 
 .assurance-text>.description {
     font-weight: 400;
-    font-size: 2rem;
+    font-size: 1.3rem;
     color: var(--color-assurance);
+}
+
+@media screen and (min-width: 768px) {
+    .banner-bottom-text>.top-text {
+        font-size: 2rem;
+        margin-block-start: 9rem;
+    }
+
+    .banner-bottom-text>.title {
+        font-size: 4rem;
+    }
+
+    .banner-bottom-text>.description {
+        width: fit-content;
+        font-size: 1.5rem;
+        margin-block-end: 1rem;
+    }
+
+    .bottom-button {
+        font-size: 1.5rem;
+        margin-block-start: 1.2rem;
+        margin-block-end: 8rem;
+        padding: 1.5rem 3.3rem;
+    }
+
+    /* Assurance nav */
+    .assurance-container {
+        width: fit-content;
+        column-gap: 5rem;
+        margin-block-start: 7rem;
+        margin-block-end: 7rem;
+    }
+
+    .assurance-text>.title {
+        font-size: 2rem;
+    }
+
+    .assurance-text>.description {
+        font-size: 1.5rem;
+    }
+
+}
+
+@media screen and (min-width: 1024px) {
+
+    /* Assurance nav */
+    .assurance-container {
+        column-gap: 8rem;
+        margin-block-start: 8rem;
+        margin-block-end: 8rem;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .banner-bottom-text>.top-text {
+        font-size: 3rem;
+        margin-block-start: 14rem;
+    }
+
+    .banner-bottom-text>.title {
+        font-size: 6rem;
+    }
+
+    .banner-bottom-text>.description {
+        font-size: 2rem;
+        margin-block-end: 2rem;
+    }
+
+    .bottom-button {
+        font-size: 2rem;
+        margin-block-start: 1.2rem;
+        margin-block-end: 10rem;
+        padding: 1.5rem 3.3rem;
+    }
+
+    /* Assurance nav */
+    .assurance-container {
+        column-gap: 14rem;
+        margin-block-start: 15rem;
+        margin-block-end: 15rem;
+    }
+
+    .assurance-content {
+        width: auto;
+    }
+
+    .assurance-text>.title {
+        font-size: 2.5rem;
+    }
+
+    .assurance-text>.description {
+        font-size: 2rem;
+    }
+
 }
