--- a/styles/components/new-arrival.css
+++ b/styles/components/new-arrival.css
@@ -41,9 +41,10 @@
 
     gap: 2.5rem;
     margin-block-end: 5rem;
+    transition: all 300ms;
 }
 
-/* Mobile version */
+/* Mobile version: select */
 .new-arrivals-filters-select {
     display: flex;
     flex-direction: column;
@@ -55,7 +56,6 @@
 .new-arrivals-filters-select>label {
     color: var(--color-black);
     font-size: 2rem;
-    font-family: "Poppins";
 }
 
 .new-arrivals-filters-select>select {
@@ -77,7 +77,7 @@
     border-radius: 1.4rem;
 
     cursor: pointer;
-    transition: all 200ms;
+    transition: all 300ms;
 }
 
 .filter-btn.active {
@@ -94,8 +94,8 @@
 .new-arrivals-bottom {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 6rem 4rem;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 6rem 1rem;
 }
 
 .new-arrivals-button {
@@ -106,7 +106,7 @@
     background-color: var(--color-primary);
     color: var(--color-white);
 
-    padding: 1.8rem 7.6rem;
+    padding: 1rem 3rem;
     margin-block-start: 3rem;
     margin-block-end: 8rem;
     border: solid 1px transparent;
@@ -114,13 +114,24 @@
 
     box-shadow: 0px 20px 35px #00000026;
     cursor: pointer;
-    transition: all 150ms;
+    transition: all 300ms;
 }
 
 .new-arrivals-button:hover {
     background-color: var(--color-white);
     color: var(--color-primary);
     border: solid 1px var(--color-primary);
+}
+
+@media screen and (min-width: 768px) {
+    .new-arrivals-bottom {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 6rem 3rem;
+    }
+
+    .new-arrivals-button {
+        padding: 1.8rem 5rem;
+    }
 }
 
 @media screen and (min-width: 1024px) {
@@ -131,11 +142,29 @@
     .new-arrivals-filters-select {
         display: none;
     }
+
+    .new-arrivals-bottom {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 6rem 4rem;
+    }
+
+    .new-arrivals-button {
+        padding: 1.8rem 7.6rem;
+    }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
     .filter-btn {
         width: 207px;
         height: 56px;
+    }
+
+    .new-arrivals-bottom {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 6rem 4rem;
+    }
+
+    .new-arrivals-button {
+        padding: 1.8rem 7.6rem;
     }
 }
