--- a/styles/components/product-card.css
+++ b/styles/components/product-card.css
@@ -96,3 +96,9 @@
     background-color: var(--color-primary);
     color: var(--color-white);
 }
+
+@media screen and (max-width: 767px) {
+    .product-card_buy {
+        display: none;
+    }
+}
