--- a/styles/components/product-card.css
+++ b/styles/components/product-card.css
@@ -10,7 +10,7 @@
 
 .product-card_image {
     width: 100%;
-    height: auto;
+    height: 100%;
     aspect-ratio: 1;
     object-fit: contain;
     background-color: var(--color-lighter-gray);
@@ -22,6 +22,7 @@
     color: var(--color-black);
     font-size: 2.5rem;
     font-weight: 500;
+    word-break: break-all;
 }
 
 .product-card_brand {
