--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,6 +1,22 @@
 * {
+    font-family: "Poppins";
     margin: 0;
     padding: 0;
+}
+
+:root {
+    font-size: 8px;
+    /* Colors */
+    --color-primary: #ED1C24;
+    --color-black: #191919;
+    --color-paragraph: #525252;
+    --color-button: #8A8A8A;
+    --color-border-card: #E5E5E5;
+    --color-original-price: #A3A3A3;
+    --color-assurance: #484848;
+    --color-white: #FFFFFF;
+    --color-darker-gray: #CCCCCC;
+    --color-lighter-gray: #FAFAFA;
 }
 
 *,
@@ -20,8 +36,19 @@ select {
     font: inherit;
 }
 
+p,
+a,
+span {
+    font-size: 2rem;
+}
+
 p {
     text-wrap: pretty;
+}
+
+h1,
+h2 {
+    font-family: "Roboto";
 }
 
 h1,
@@ -33,11 +60,19 @@ h6 {
     text-wrap: balance;
 }
 
+.img-logo {
+    display: block;
+}
+
 img,
 video,
 svg {
     height: auto;
     max-width: 100%;
+}
+
+.icon {
+    stroke: currentColor;
 }
 
 @media (prefers-reduce-motion: reduce) {
