--- a/styles/minicart_styles.css
+++ b/styles/minicart_styles.css
@@ -1,3 +1,3 @@
-* {
-    background-color: bisque;
-}
+@import "./reset.css";
+@import "../assets/fonts/fonts.css";
+@import "./components/index.css";
