--- a/styles/productPage_styles.css
+++ b/styles/productPage_styles.css
@@ -2,563 +2,14 @@
 @import "../assets/fonts/fonts.css";
 @import "./components/index.css";
 
-/*MINI-CART*/
-.overlay {
-    display: none;
-    justify-content: end;
-    background-color: #78787869;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 1;
-}
-
-.mini-cart-block {
-    display: flex;
-    flex-direction: column;
-    background-color: #FFFFFF;
-    width: 741px;
-    padding: 2.5rem 6rem 0rem 6rem;
-}
-
-.mini-cart-top {
-    display: inline-flex;
-    justify-content: space-between;
-    margin-bottom: 1.5rem;
-}
-
-.mini-cart-top>h1 {
-    font-family: "Volkhov";
-    font-size: 5rem;
-    font-weight: 400;
-    margin-top: 0.5rem;
-}
-
-.cancel-btn {
-    width: 24px;
-    height: 24px;
-    cursor: pointer;
-    background-color: transparent;
-    border: none;
-    transition: all 150ms;
-}
-
-.cancel-btn:hover {
-    color: var(--color-primary);
-}
-
-.message-free-shipping {
-    text-transform: capitalize;
-    color: var(--color-button);
-    font-size: 3.2rem;
-    padding-left: 2rem;
-    margin-bottom: 4rem;
-}
-
-.message-free-shipping>b {
-    color: black;
-}
-
-.mini-cart-product-box {
-    display: inline-flex;
-    border-bottom: solid 1px rgba(0, 0, 0, 0.39);
-    gap: 2.5rem;
-    padding-bottom: 2rem;
-}
-
-.mini-cart-image {
-    width: 168px;
-    height: 225px;
-}
-
-.mini-cart-image>img {
-    height: 100%;
-    object-fit: cover;
-}
-
-.mini-cart-details-container {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-}
-
-.mini-cart-details-title {
-    color: black;
-    text-decoration: none;
-    text-transform: capitalize;
-}
-
-.mini-cart-details-title>span {
-    font-family: "Volkhov";
-    font-size: 2.6rem;
-    font-weight: 500;
-}
-
-.mini-cart-details-color {
-    font-size: 2.6rem;
-    font-weight: 400;
-    color: var(--color-button);
-}
-
-.mini-cart-details-price {
-    font-size: 2.6rem;
-    font-weight: 400;
-}
-
-.mini-cart-details-quantity-box {
-    display: inline-flex;
-    align-items: center;
-    gap: 3rem;
-}
-
-.mini-cart-details-quantity-control {
-    width: 170px;
-    height: 59px;
-    background-color: #F1F1F1;
-    border-radius: 0.6rem;
-    font-size: 4.5rem;
-}
-
-.cart-decrease-btn,
-.cart-increase-btn {
-    font-weight: 500;
-    width: 55px;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    transition: all 150ms;
-}
-
-.cart-input {
-    font-weight: 400;
-    width: 40px;
-    height: 100%;
-    background-color: transparent;
-    border: none;
-    text-align: center;
-}
-
-.trash-btn {
-    width: 35px;
-    height: 35px;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    transition: all 150ms;
-}
-
-.cart-decrease-btn:hover,
-.cart-increase-btn:hover,
-.trash-btn:hover {
-    color: var(--color-primary);
-}
-
-.mini-cart-check-wrap {
-    display: inline-flex;
-    border-bottom: solid 1px rgba(0, 0, 0, 0.39);
-    align-items: center;
-    gap: 0.7rem;
-    padding-bottom: 3rem;
-    margin: 18rem 0rem 6rem 0rem;
-}
-
-.mini-cart-check-wrap>input {
-    width: 32px;
-    height: 32px;
-    border: solid 1px black;
-}
-
-.check-message {
-    font-size: 2.6rem;
-    color: var(--color-button);
-}
-
-.check-message>b {
-    font-weight: 400;
-    color: black;
-}
-
-.mini-cart-subtotal {
-    display: inline-flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.subtotal-title,
-.subtotal-data {
-    font-family: "Volkhov";
-    font-size: 2.6rem;
-    font-weight: 400;
-}
-
-.mini-cart-confirm {
-    display: inline-flex;
-    justify-content: center;
-    font-size: 2rem;
-    margin: 4rem 0rem 4rem 0rem;
-}
-
-.confirm-btn {
-    width: 610px;
-    height: 66px;
-    background-color: var(--color-primary);
-    border: solid 1px transparent;
-    border-radius: 1.2rem;
-    box-shadow: 0px 20px 35px #00000026;
-    color: var(--color-white);
-
-    cursor: pointer;
-    transition: all 300ms;
-}
-
-.confirm-btn:hover {
-    background-color: var(--color-white);
-    color: var(--color-primary);
-    border: solid 1px var(--color-primary);
-}
-
-/*-------------------------------------------------------------*/
 .main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 0rem 2.5rem 0rem 2.5rem;
     margin-top: 4.5rem;
-}
-
-.product-images-block {
-    display: flex;
-    flex-direction: row;
-    gap: 2.5rem;
-}
-
-/*ASIDE*/
-.aside-images {
-    width: 70px;
-    height: 654.58px;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-}
-
-.aside-image-box {
-    height: 93.33px;
-    padding: 0.4rem;
-    cursor: pointer;
-    transition: all 150ms;
-}
-
-.aside-image-box:hover {
-    border: solid 1px black;
-}
-
-.aside-image-selected {
-    border: solid 1px black;
-}
-
-.aside-image-box>img {
-    height: 100%;
-    object-fit: cover;
-}
-
-.product-images-block>img {
-    width: 491px;
-    height: 654.58px;
-    object-fit: cover;
-}
-
-/*PRODUCT CONTENT*/
-.product-content-block {
-    width: 585px;
-}
-
-.product-content-top {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 3rem;
-}
-
-.product-title {
-    font-family: "Volkhov";
-    font-size: 3.6rem;
-    font-weight: 400;
-}
-
-.product-star-btn {
-    width: 45px;
-    height: 45px;
-    background-color: transparent;
-    border: solid 1px #EEEEEE;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: all 150ms;
-}
-
-.product-star-btn:hover {
-    box-shadow: 1px 1px 7px 1px rgba(0, 0, 0, 0.2);
-    color: var(--color-primary);
-}
-
-.product-content-rate {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    gap: 1rem;
-}
-
-.product-content-rate,
-.product-rate-box {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.product-rate-box>a {
-    display: flex;
-    text-decoration: none;
-    color: black;
-}
-
-.product-content-rate>span {
-    font-family: "Jost";
-    font-size: 2rem;
-}
-
-.product-content-price {
-    display: flex;
-    align-items: center;
-    margin-top: 2rem;
-    margin-bottom: 3.5rem;
-    gap: 1.5rem;
-}
-
-.product-discount {
-    font-family: "Volkhov";
-    font-size: 3rem;
-}
-
-.product-price {
-    color: #666666;
-    font-family: "Jost";
-    font-size: 2rem;
-    text-decoration: line-through;
-}
-
-.product-price-message {
-    border-radius: 5rem;
-    color: var(--color-white);
-    background-color: #DA3F3F;
-    font-family: "Jost";
-    font-size: 1.3rem;
-    font-weight: 500;
-    text-transform: uppercase;
-    padding: 0.5rem 1.5rem 0.5rem 1.5rem;
-}
-
-.product-content-views {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 3rem 0rem 4rem 0rem;
-    gap: 1rem;
-}
-
-.product-content-views>span {
-    color: var(--color-button);
-}
-
-.product-content-discount-time {
-    align-items: center;
-    background-color: #FDEFEE;
-    border: solid 1px #F8CCCC;
-    border-radius: 0.6rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 2rem 3rem 2rem 2rem;
-}
-
-.product-content-discount-time>span {
-    color: #FF706B;
-    font-family: "Volkhov";
-    font-size: 2.2rem;
-    font-weight: 400;
-}
-
-.time-box {
-    display: flex;
-    padding: 0rem 1.5rem 0rem 1.5rem;
-    gap: 2rem;
-}
-
-.time-box>span {
-    color: #FF706B;
-    font-family: "Jost";
-    font-size: 2.6rem;
-}
-
-.time-data {
-    font-weight: 600;
-}
-
-.product-content-stock {
-    display: flex;
-    flex-direction: column;
-    gap: 1.7rem;
-    margin: 3rem 0rem 3.5rem 0rem;
-}
-
-.product-content-stock>span,
-.product-content-stock>span>b {
-    font-family: "Jost";
-    font-size: 2rem;
-    color: #666666;
-}
-
-.stock-bar {
-    border-radius: 2px;
-    height: 5px;
-    background-color: #DEDEDE;
-}
-
-.red-stock-bar {
-    border-radius: 2px;
-    height: 5px;
-    width: 9%;
-    background-color: #EF2D2D;
-}
-
-.product-content-size {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-}
-
-.product-content-size>span {
-    font-family: "Volkhov";
-    font-size: 2rem;
-    font-weight: 700;
-}
-
-.size-box {
-    display: inline-flex;
-    gap: 1.3rem;
-    margin-bottom: 2.5rem;
-}
-
-.size-btn {
-    width: 45px;
-    height: 45px;
-    background-color: transparent;
-    border: solid 1px #EEEEEE;
-    border-radius: 0.5rem;
-    cursor: pointer;
-    font-family: "Poppins";
-    font-size: 2.2rem;
-    background-color: transparent;
-    transition: all 150ms;
-}
-
-.size-selected {
-    background-color: black;
-    color: white;
-}
-
-.size-btn:not(.size-selected):hover {
-    color: var(--color-primary);
-    box-shadow: 1px 1px 7px 1px rgba(0, 0, 0, 0.2);
-}
-
-.product-content-color {
-    display: flex;
-    flex-direction: column;
-    gap: 1.7rem;
-    margin-bottom: 1.5rem;
-}
-
-.product-content-color>span {
-    font-family: "Volkhov";
-    font-size: 2rem;
-    font-weight: 400;
-    text-transform: capitalize;
-}
-
-.product-content-color>span>b {
-    font-family: "Volkhov";
-    font-weight: 700;
-}
-
-.color-box {
-    display: inline-flex;
-    gap: 1rem;
-}
-
-.color-box>button {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: solid 1px transparent;
-    cursor: pointer;
-    transition: all 150ms;
-}
-
-.color-box>button:not(.color-selected):hover {
-    box-shadow: 0px 0px 0px 4px rgba(255, 255, 255, 1) inset;
-}
-
-.color-selected {
-    box-shadow: 0px 0px 0px 4px rgba(255, 255, 255, 1) inset;
-}
-
-.product-content-quantity {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-}
-
-.product-content-quantity>span {
-    font-family: "Volkhov";
-    font-size: 2rem;
-    font-weight: 400;
-}
-
-.quantity-box {
-    height: 45px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.quantity-container {
-    width: 128px;
-    border-radius: 0.5rem;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    border: solid 1px #EEEEEE;
-    font-size: 2rem;
-}
-
-.decrease-quantity-btn,
-.increase-quantity-btn {
-    width: 43px;
-    height: 100%;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-}
-
-.input-quantity {
-    width: 40px;
-    height: 100%;
-    background-color: transparent;
-    border: none;
-    text-align: center;
-    font-family: "Jost";
+    gap: 3rem;
+    transition: all 300ms;
 }
 
 input[type=number]::-webkit-inner-spin-button {
@@ -566,84 +17,9 @@ input[type=number]::-webkit-inner-spin-button {
     margin: 0;
 }
 
-.add-cart-btn {
-    background-color: transparent;
-    border: solid 1px black;
-    border-radius: 0.6rem;
-    cursor: pointer;
-    font-family: "Volkhov";
-    font-size: 2rem;
-    font-weight: 400;
-    padding: 0rem 23rem 0rem 23rem;
-    transition: all 150ms;
-}
-
-.add-cart-btn:hover {
-    background-color: black;
-    color: var(--color-white);
-}
-
-.product-content-additional-options {
-    width: 100%;
-    display: inline-flex;
-    border-bottom: solid 1px #EEEEEE;
-    gap: 4rem;
-    margin: 7rem 0rem 3.5rem 0rem;
-    padding-bottom: 1.5rem;
-}
-
-.options-box>a {
-    display: inline-flex;
-    align-items: center;
-    gap: 1rem;
-    text-decoration: none;
-    color: black;
-}
-
-.options-box>a>span {
-    font-family: "Jost";
-    font-size: 2rem;
-}
-
-.product-content-deliver-information {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.delivey-box,
-.shipping-return-box {
-    display: inline-flex;
-    align-items: center;
-    gap: 0.7rem;
-}
-
-.delivery-title {
-    font-family: "Valkhov";
-    font-size: 2.3rem;
-    font-weight: 700;
-}
-
-.delivery-data {
-    font-family: "Jost";
-    font-size: 2rem;
-}
-
-.product-content-bottom {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-
-    background-color: #F8F8F8;
-    border-radius: 0.6rem;
-    padding: 2rem 0rem 2rem 0rem;
-    margin: 3rem 0rem 3rem 0rem;
-}
-
-.product-content-bottom>span {
-    font-family: "Volhov";
-    font-size: 2rem;
-    font-weight: 400;
+@media screen and (max-width: 767px) {
+    .main {
+        flex-direction: column;
+        align-items: center;
+    }
 }
